# uconv

./: .gitignore  CMakeLists.txt  Gemfile  Imakefile  README.md  copyright  copyright~  finished.md  put-copyright  update-copyright.sh
.github/: CODEOWNERS
.github/workflows/: ci.yml  docs.yml  full_analysis.yml
Examples/: CMakeLists.txt  basic_conversion.cc  dynamic_units.cc  physics.cc
Tests/: .clang_complete  CMakeLists.txt  api_ops_legacy.cc  compound.cc  coverage_drivers.cc  error_paths.cc  general_units.cc  line.cc  numeric_robustness.cc  quantity.cc  run-test  run_dsl_negative_case.sh  uconv_api.cc  unititem.cc  unititem.cc~
Tests/dsl-invalid/: cross_quantity_conversion.rb  duplicate_conversion_pair.rb  duplicate_pq_name.rb  duplicate_pq_symbol.rb  duplicate_unit_name.rb  duplicate_unit_symbol.rb  invalid_range.rb  missing_coverage.rb  missing_description.rb  missing_formula.rb  missing_latex.rb  missing_quantity_reference.rb  missing_range.rb  missing_symbol.rb  non_numeric_range.rb  parse_error.rb  self_conversion.rb  type_name_collision.rb  unknown_quantity.rb  unknown_source_unit.rb  unknown_target_unit.rb
cmake/: Doxyfile.in
docs/: adding-units.md  architecture.md  dsl-reference.md  mainpage.md
fuzz/: .clang_complete  CMakeLists.txt  Imakefile  simple.cc
include/: .clang_complete  ah-uconv-errors.H  area-unit.H  current-unit.H  density-unit.H  flowrate-unit.H  length-unit.H  multiunitmap.H  power-unit.H  temperature-unit.H  time-unit.H  uconv-list.H  uconv.H  unit-exceptions.H  unititem.H  units-list.H  units.H  unittest-utils.H
include/units/: Readme.md  angle-unit.H  area-unit.H  current-unit.H  density-unit.H  diameter-unit.H  dimension-less-unit.H  dummy-unit.H  flowrate-unit.H  frequency-unit.H  length-unit.H  power-unit.H  pressure-unit.H  temperature-unit.H  time-unit.H  velocity-unit.H
lib/: .clang_complete  CMakeLists.txt  Imakefile  buildunits  new.sh  uconv.cc  unit-defs.rb  units-vars.cc
lib/unit-defs/: acceleration.rb  area.rb  capacitance.rb  charge.rb  current.rb  diameter.rb  dynamic_viscosity.rb  energy.rb  flowrate.rb  force.rb  frequency.rb  kinematic_viscosity.rb  length.rb  mass.rb  massflow.rb  power.rb  pressure.rb  resistance.rb  temperature.rb  time.rb  torque.rb  velocity.rb  voltage.rb  volume.rb
lib/units/: angle.rb  area.rb  density.rb  diameter.rb  dimensionless.rb  power.rb
tests/: CMakeLists.txt  Imakefile  TODO.md  TODO.txt  conversion.cc  convert.cc  finished.md  finished.txt  test-all-units.cc  test-unit-table.cc  vector-conversion.cc  vector-convert.cc
utils/: CMakeLists.txt  all-units.cc  convert.cc  unit-table.cc  vector-convert.cc
